added main to urls in templates for frontend

--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -82,10 +82,10 @@
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-hero-sections.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-hero-sections.html">
                       Page Headers
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-features.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
                       Features
                     </a>
                   </div>
@@ -101,13 +101,13 @@
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-navbars.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
                       Navbars
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-nav-tabs.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
                       Nav Tabs
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-pagination.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
                       Pagination
                     </a>
                   </div>
@@ -123,10 +123,10 @@
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-inputs.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
                       Inputs
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-forms.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
                       Forms
                     </a>
                   </div>
@@ -142,13 +142,13 @@
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-alerts.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
                       Alerts
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-modals.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
                       Modals
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-tooltips-popovers.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
                       Tooltips & Popovers
                     </a>
                   </div>
@@ -164,28 +164,28 @@
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-avatars.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
                       Avatars
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-badges.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
                       Badges
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-breadcrumbs.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
                       Breadcrumbs
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-buttons.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
                       Buttons
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-dropdowns.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
                       Dropdowns
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-progress-bars.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
                       Progress Bars
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-toggles.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
                       Toggles
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-typography.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
                       Typography
                     </a>
                   </div>
@@ -203,10 +203,10 @@
                       </div>
                     </div>
                   </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-hero-sections.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-hero-sections.html">
                     Page Headers
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-features.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
                     Features
                   </a>
                   <div class="d-flex mb-2 mt-3">
@@ -219,13 +219,13 @@
                       </div>
                     </div>
                   </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-navbars.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
                     Navbars
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-nav-tabs.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
                     Nav Tabs
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-pagination.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
                     Pagination
                   </a>
                   <div class="d-flex mb-2 mt-3">
@@ -238,10 +238,10 @@
                       </div>
                     </div>
                   </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-inputs.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
                     Inputs
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-forms.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
                     Forms
                   </a>
                   <div class="d-flex mb-2 mt-3">
@@ -254,13 +254,13 @@
                       </div>
                     </div>
                   </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-alerts.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
                     Alerts
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-modals.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
                     Modals
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-tooltips-popovers.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
                     Tooltips & Popovers
                   </a>
                   <div class="d-flex mb-2 mt-3">
@@ -273,28 +273,28 @@
                       </div>
                     </div>
                   </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-avatars.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
                     Avatars
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-badges.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
                     Badges
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-breadcrumbs.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
                     Breadcrumbs
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-buttons.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
                     Buttons
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-dropdowns.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
                     Dropdowns
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-progress-bars.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
                     Progress Bars
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-toggles.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
                     Toggles
                   </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-typography.html">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
                     Typography
                   </a>
                 </div>
