--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -85,10 +85,10 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-hero-sections.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-hero-sections.html">
                             Page Headers
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-features.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
                             Features
                           </a>
                         </div>
@@ -104,13 +104,13 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-navbars.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
                             Navbars
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-nav-tabs.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
                             Nav Tabs
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-pagination.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
                             Pagination
                           </a>
                         </div>
@@ -126,10 +126,10 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-inputs.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
                             Inputs
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-forms.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
                             Forms
                           </a>
                         </div>
@@ -145,13 +145,13 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-alerts.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
                             Alerts
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-modals.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
                             Modals
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-tooltips-popovers.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
                             Tooltips & Popovers
                           </a>
                         </div>
@@ -167,28 +167,28 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-avatars.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
                             Avatars
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-badges.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
                             Badges
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-breadcrumbs.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
                             Breadcrumbs
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-buttons.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
                             Buttons
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-dropdowns.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
                             Dropdowns
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-progress-bars.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
                             Progress Bars
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-toggles.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
                             Toggles
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-typography.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
                             Typography
                           </a>
                         </div>
@@ -206,10 +206,10 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-hero-sections.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-hero-sections.html">
                           Page Headers
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-sections-features.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-sections-features.html">
                           Features
                         </a>
                         <div class="d-flex mb-2 mt-3">
@@ -222,13 +222,13 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-navbars.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
                           Navbars
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-nav-tabs.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
                           Nav Tabs
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-navigation-pagination.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
                           Pagination
                         </a>
                         <div class="d-flex mb-2 mt-3">
@@ -241,10 +241,10 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-inputs.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
                           Inputs
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-input-forms.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
                           Forms
                         </a>
                         <div class="d-flex mb-2 mt-3">
@@ -257,13 +257,13 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-alerts.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
                           Alerts
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-modals.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
                           Modals
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-catchers-tooltips-popovers.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
                           Tooltips & Popovers
                         </a>
                         <div class="d-flex mb-2 mt-3">
@@ -276,22 +276,22 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-avatars.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
                           Avatars
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-badges.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
                           Badges
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-breadcrumbs.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
                           Breadcrumbs
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-buttons.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
                           Buttons
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-dropdowns.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
                           Dropdowns
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-progress-bars.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
                           Progress Bars
                         </a>
                         <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-toggles.html">
