changed upgrade to pro to dashboard link in frontend

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1108,7 +1108,7 @@
               Designed for those who like bold elements and beautiful websites. Made of hundred of elements, designed blocks and fully coded pages, Material Kit is ready to help you create stunning websites and webapps.
             </p>
             <div class="github-buttons">
-              <a href="https://appseed.us/product/django-material-kit2-pro" target="_blank" class="btn bg-gradient-primary mb-5 mb-sm-0">Upgrade to Pro</a>
+              <a href="/dashboard/" target="_blank" class="btn bg-gradient-primary mb-5 mb-sm-0">Dashboard</a>
               <div class="github-button">
                 <span></span>
               </div>
