--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -348,7 +348,7 @@
             </a>
           </li>
           <li class="nav-item my-auto ms-3 ms-lg-0">
-            <a href="https://appseed.us/product/django-material-kit2-pro" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Upgrade to Pro</a>
+            <a href="/dashboard/" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Dashboard</a>
           </li>
 
           {% if request.user.is_authenticated %}
