changed headers to Maine-eDNA Metadata | Maine EPSCoR

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Django Material Kit 2 - Presentation | AppSeed
+    Maine-eDNA Metadata - Presentation | Maine EPSCoR
   </title>
 
   <!--     Fonts and icons     -->
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
-            <h1 class="text-white pt-3 mt-n5">Material Kit 2</h1>
+            <h1 class="text-white pt-3 mt-n5">Maine-eDNA Metadata</h1>
             <p class="lead text-white mt-3">Free & Open Source Web UI Kit built over Bootstrap 5. <br /> Join over 1.6 million developers around the world. </p>
           </div>
         </div>
@@ -1155,7 +1155,7 @@
             <a href="https://appseed.us/product/django-material-kit">
               <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
-            <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
+            <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
           </div>
           <div>
             <ul class="d-flex flex-row ms-n3 nav">
