--- a/frontend/templates/home/django-material-kit/ui-navigation-nav-tabs.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-nav-tabs.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Django Material Kit 2 - Nav Tabs | AppSeed
+    Maine-eDNA Metadata - Nav Tabs | Maine EPSCoR
   </title>
 
   <!--     Fonts and icons     -->
