--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -7,7 +7,7 @@
             <a href="https://appseed.us/product/django-material-kit">
               <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
-            <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
+            <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
           </div>
           <div>
             <ul class="d-flex flex-row ms-n3 nav">
