--- a/frontend/templates/layouts/django-material-kit/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-kit/base-fullscreen.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Django Material Kit 2 - {% block title %}{% endblock %} | AppSeed
+    Maine-eDNA Metadata - {% block title %}{% endblock %} | Maine EPSCoR
   </title>
   
   <!--     Fonts and icons     -->
