--- a/frontend/templates/home/django-material-kit/ui-catchers-modals.html
+++ b/frontend/templates/home/django-material-kit/ui-catchers-modals.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Django Material Kit 2 - Modals | AppSeed
+    Maine-eDNA Metadata - Modals | Maine EPSCoR
   </title>
 
   <!--     Fonts and icons     -->
