--- a/frontend/templates/home/django-material-kit/ui-elements-avatars.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-avatars.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Django Material Kit 2 - Avatars | AppSeed
+    Maine-eDNA Metadata - Avatars | Maine EPSCoR
   </title>
 
   <!--     Fonts and icons     -->
