--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -48,7 +48,7 @@
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
             <h1 class="text-white pt-3 mt-n5">Maine-eDNA Metadata</h1>
-            <p class="lead text-white mt-3">Free & Open Source Web UI Kit built over Bootstrap 5. <br /> Join over 1.6 million developers around the world. </p>
+            <p class="lead text-white mt-3">A Free & Open Source data management system <br />for tracking environmental DNA samples. </p>
           </div>
         </div>
       </div>
