--- a/frontend/templates/home/django-material-kit/ui-sections-hero-sections.html
+++ b/frontend/templates/home/django-material-kit/ui-sections-hero-sections.html
@@ -115,12 +115,12 @@
 
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="https://twitter.com/CreativeTim">
+            <a class="nav-link text-white" href="https://twitter.com/maineepscor">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white mx-2" href="https://www.facebook.com/CreativeTim">
+            <a class="nav-link text-white mx-2" href="https://www.facebook.com/MaineEPSCoR">
               <i class="fab fa-facebook"></i>
             </a>
           </li>
@@ -185,12 +185,12 @@
 
         <span class="nt">&lt;ul</span> <span class="na">class=</span><span class="s">"nav navbar-nav"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item"</span><span class="nt">&gt;</span>
-            <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link text-white"</span> <span class="na">href=</span><span class="s">"https://twitter.com/CreativeTim"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link text-white"</span> <span class="na">href=</span><span class="s">"https://twitter.com/maineepscor"</span><span class="nt">&gt;</span>
               <span class="nt">&lt;i</span> <span class="na">class=</span><span class="s">"fab fa-twitter"</span><span class="nt">&gt;&lt;/i&gt;</span>
             <span class="nt">&lt;/a&gt;</span>
           <span class="nt">&lt;/li&gt;</span>
           <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item"</span><span class="nt">&gt;</span>
-            <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link text-white mx-2"</span> <span class="na">href=</span><span class="s">"https://www.facebook.com/CreativeTim"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link text-white mx-2"</span> <span class="na">href=</span><span class="s">"https://www.facebook.com/MaineEPSCoR"</span><span class="nt">&gt;</span>
               <span class="nt">&lt;i</span> <span class="na">class=</span><span class="s">"fab fa-facebook"</span><span class="nt">&gt;&lt;/i&gt;</span>
             <span class="nt">&lt;/a&gt;</span>
           <span class="nt">&lt;/li&gt;</span>
