--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -12,27 +12,22 @@
           <div>
             <ul class="d-flex flex-row ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim" target="_blank">
+                <a class="nav-link pe-1" href="https://www.facebook.com/MaineEPSCoR" target="_blank">
                   <i class="fab fa-facebook text-lg opacity-8"></i>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://twitter.com/creativetim" target="_blank">
+                <a class="nav-link pe-1" href="https://twitter.com/maineepscor" target="_blank">
                   <i class="fab fa-twitter text-lg opacity-8"></i>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://dribbble.com/creativetim" target="_blank">
-                  <i class="fab fa-dribbble text-lg opacity-8"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link pe-1" href="https://github.com/creativetimofficial" target="_blank">
+                <a class="nav-link pe-1" href="https://github.com/Maine-eDNA/medna-metadata" target="_blank">
                   <i class="fab fa-github text-lg opacity-8"></i>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.youtube.com/channel/UCVyTG4sCw-rOvB9oHkzZD1w" target="_blank">
+                <a class="nav-link pe-1" href="https://www.youtube.com/channel/UCnANSENXoXuIGlzKaFkbPJw" target="_blank">
                   <i class="fab fa-youtube text-lg opacity-8"></i>
                 </a>
               </li>
