add Maine-eDNA metadata logo to templates

--- a/frontend/templates/includes/django-datta-able/sidebar.html
+++ b/frontend/templates/includes/django-datta-able/sidebar.html
@@ -3,11 +3,11 @@
         <div class="navbar-wrapper">
             <div class="navbar-brand header-logo">
                 <a target="_blank" 
-                   href="https://appseed.us/admin-dashboards/django-dashboard-dattaable" class="b-brand">
+                   href="/dashboard/" class="b-brand">
                     <div class="b-bg">
                         <i class="feather icon-trending-up"></i>
                     </div>
-                    <span class="b-title">Django Datta Able</span>
+                    <span class="b-title">Maine-eDNA Metadata</span>
                 </a>
                 <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
             </div>
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li data-username="Support Page" class="nav-item ">
-                        <a target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-dattaable-pro" class="nav-link">
+                        <a target="_blank" href="/dashboard/" class="nav-link">
                             <span class="pcoded-micon">
                                 <i class="feather icon-tag"></i>
                             </span>
