updated icons and headers in templates

--- a/frontend/templates/includes/django-datta-able/sidebar.html
+++ b/frontend/templates/includes/django-datta-able/sidebar.html
@@ -7,7 +7,7 @@
                     <div class="b-bg">
                         <i class="feather icon-trending-up"></i>
                     </div>
-                    <span class="b-title">Maine-eDNA Metadata</span>
+                    <span class="b-title">MeDNA-Metadata</span>
                 </a>
                 <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
             </div>
