--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1152,7 +1152,7 @@
       <div class=" row">
         <div class="col-md-3 mb-4 ms-auto">
           <div>
-            <a href="https://appseed.us/product/django-material-kit">
+            <a href="https://umaine.edu/edna">
               <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
