--- a/frontend/templates/includes/django-datta-able/scripts.html
+++ b/frontend/templates/includes/django-datta-able/scripts.html
@@ -2,3 +2,4 @@
     <!-- Required Js -->
     <script src="{% static 'assets/js/django-datta-able/vendor-all.min.js' %}"></script>
     <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'assets/js/django-datta-able/pcoded.min.js' %}"></script>
