--- a/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
@@ -91,7 +91,7 @@
 <nav
   class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3">
   <div class="container">
-    <a class="navbar-brand text-white" href="/" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+    <a class="navbar-brand text-white" href="/" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom" target="_blank">
       Material Kit 2
     </a>
     <a href="https://www.creative-tim.com/product/material-design-system-pro#pricingCard" class="btn btn-sm  bg-gradient-primary  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>
@@ -155,7 +155,7 @@
 <span class="nt">&lt;nav</span>
   <span class="na">class=</span><span class="s">"navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3"</span><span class="nt">&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"container"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"navbar-brand text-white"</span> <span class="na">href=</span><span class="s">"/"</span> <span class="na">rel=</span><span class="s">"tooltip"</span> <span class="na">title=</span><span class="s">"Designed and Coded by Creative Tim"</span> <span class="na">data-placement=</span><span class="s">"bottom"</span> <span class="na">target=</span><span class="s">"_blank"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"navbar-brand text-white"</span> <span class="na">href=</span><span class="s">"/"</span> <span class="na">rel=</span><span class="s">"tooltip"</span> <span class="na">title=</span><span class="s">"Designed and Coded by the Maine-eDNA Data Management Team"</span> <span class="na">data-placement=</span><span class="s">"bottom"</span> <span class="na">target=</span><span class="s">"_blank"</span><span class="nt">&gt;</span>
       Maine-eDNA Metadata
     <span class="nt">&lt;/a&gt;</span>
     <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"https://www.creative-tim.com/product/material-design-system-pro#pricingCard"</span> <span class="na">class=</span><span class="s">"btn btn-sm  bg-gradient-primary  btn-round mb-0 ms-auto d-lg-none d-block"</span><span class="nt">&gt;</span>Buy Now<span class="nt">&lt;/a&gt;</span>
