--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -2,7 +2,8 @@
   <!-- Navbar Light -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
     <div class="container">
-      <a class="navbar-brand" href="/" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
+      <a class="navbar-brand" href="/" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom">
+        <i class="fa fa-download me-1"></i>
         Maine-eDNA Metadata
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -356,7 +357,7 @@
               <a class="nav-link nav-link-icon me-2" 
                 href="{% url 'logout' %}">
                 <i class="fa fa-sign-out me-1"></i>
-                <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign OUT">Logout</p>
+                <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign Out">Logout</p>
               </a>
             </li>          
           {% endif %}    
