updated copyright in footer

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1283,7 +1283,7 @@
         <div class="col-12">
           <div class="text-center">
             <p class="text-dark my-4 text-sm font-weight-normal">
-              &copy; <a href="https://bit.ly/3fKQZaL" target="_blank">Creative Tim</a> - Coded By AppSeed.
+              &copy; <a href="https://github.com/melkimble" target="_blank">melkimble</a>.
             </p>
           </div>
         </div>
