--- a/frontend/templates/includes/django-material-kit/footer-components.html
+++ b/frontend/templates/includes/django-material-kit/footer-components.html
@@ -43,8 +43,7 @@
       <div class="row">
         <div class="col-8 mx-auto text-center mt-1">
           <p class="mb-0 text-secondary">
-            &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">Creative Tim</a>
-              coded by AppSeed.
+            &copy; <a href="https://github.com/melkimble" class="font-weight-bold" target="_blank">melkimble</a>
           </p>
         </div>
       </div>
