--- a/frontend/templates/includes/django-material-kit/footer-auth.html
+++ b/frontend/templates/includes/django-material-kit/footer-auth.html
@@ -4,8 +4,7 @@
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-12 col-md-6 my-auto">
             <div class="copyright text-center text-sm text-white text-lg-start">
-              &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold text-white" target="_blank">Creative Tim</a>
-              coded by AppSeed.
+              &copy; <a href="https://github.com/melkimble/" class="font-weight-bold text-white" target="_blank">melkimble</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
