updated License URL

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1273,7 +1273,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/license" target="_blank">
+                <a class="nav-link" href="https://github.com/Maine-eDNA/medna-metadata/blob/main/LICENSE" target="_blank">
                   Licenses (EULA)
                 </a>
               </li>
