--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -125,7 +125,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/license" target="_blank">
+                <a class="nav-link" href="https://github.com/Maine-eDNA/medna-metadata/blob/main/LICENSE" target="_blank">
                   Licenses (EULA)
                 </a>
               </li>
