--- a/frontend/templates/home/django-datta-able/register.html
+++ b/frontend/templates/home/django-datta-able/register.html
@@ -58,8 +58,7 @@
                     <br />
 
                     <p class="mb-2 text-muted">
-                        &copy; <a target="_blank" href="https://bit.ly/37fF9RT">CodedThemes</a> 
-                        - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>.
+                        &copy; <a target="_blank" href="https://github.com/melkimble">melkimble</a>
                     </p>
                 </div>
             </div>
