--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1263,7 +1263,7 @@
             <h6 class="text-sm">Legal</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/terms-of-service" target="_blank">
+                <a class="nav-link" href="https://github.com/Maine-eDNA/medna-metadata/blob/main/TOS.rst" target="_blank">
                   Terms & Conditions
                 </a>
               </li>
