--- a/frontend/templates/home/django-datta-able/login.html
+++ b/frontend/templates/home/django-datta-able/login.html
@@ -52,8 +52,7 @@
                     <p class="mb-0 text-muted">Don’t have an account? <a href="/dashboard/register.html" >Signup</a></p>
                     <br />
                     <p class="mb-2 text-muted">
-                        &copy; <a target="_blank" href="https://bit.ly/37fF9RT">CodedThemes</a> 
-                        - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>.
+                        &copy; <a target="_blank" href="https://github.com/melkimble">melkimble</a>
                     </p>
                 </div>
             </div>
