--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -115,7 +115,7 @@
             <h6 class="text-sm">Legal</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/terms-of-service" target="_blank">
+                <a class="nav-link" href="https://github.com/Maine-eDNA/medna-metadata/blob/main/TOS.rst" target="_blank">
                   Terms & Conditions
                 </a>
               </li>
@@ -135,8 +135,7 @@
         <div class="col-12">
           <div class="text-center">
             <p class="text-dark my-4 text-sm font-weight-normal">
-              &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">Creative Tim</a> 
-              coded by <a href="https://appseed.us" class="font-weight-bold" target="_blank">AppSeed</a>.
+              &copy; <a href="https://github.com/melkimble" class="font-weight-bold" target="_blank">melkimble</a>
             </p>
           </div>
         </div>
