updated navbar hrefs

--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -4,7 +4,7 @@
       <div class=" row">
         <div class="col-md-3 mb-4 ms-auto">
           <div>
-            <a href="https://appseed.us/product/django-material-kit">
+            <a href="https://umaine.edu/edna/">
               <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
@@ -39,7 +39,7 @@
             <h6 class="text-sm">Company</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/presentation" target="_blank">
+                <a class="nav-link" href="/main/about-us.html" target="_blank">
                   About Us
                 </a>
               </li>
@@ -88,7 +88,7 @@
             <h6 class="text-sm">Help & Support</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/contact-us" target="_blank">
+                <a class="nav-link" href="/main/contact-us.html" target="_blank">
                   Contact Us
                 </a>
               </li>
