--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -52,7 +52,7 @@
                   <span>Contact Us</span>
                 </a>
                 <a href="/main/author.html" class="dropdown-item border-radius-md">
-                  <span>Author</span>
+                  <span>Profile</span>
                 </a>
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
                   Account
@@ -66,7 +66,7 @@
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="material-icons opacity-6 me-2 text-md">view_day</i>
-              Sections
+              Documentation
               <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
             </a>
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
@@ -312,16 +312,16 @@
                 <ul class="list-group">
 
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://appseed.us/support">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
-                      <span class="text-sm">Get support from experts (email and Discord)</span>
+                      <span class="text-sm">Get support from experts</span>
                     </a>
                   </li> 
 
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit?AFFILIATE=128200">
-                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - UI Docs</h6>
-                      <span class="text-sm">Explore this collection of fully designed components</span>
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest">
+                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - ReadTheDocs</h6>
+                      <span class="text-sm">Technical documentation on deploying this application</span>
                     </a>
                   </li>
 
@@ -329,13 +329,13 @@
               </div>
               <div class="row d-lg-none">
                 <div class="col-md-12 g-0">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://appseed.us/support">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href=/main/support">
                     <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
-                    <span class="text-sm">Get support from experts (email and Discord)</span>
+                    <span class="text-sm">Get support from experts</span>
                   </a>
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit?AFFILIATE=128200">
-                    <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - UI Docs</h6>
-                    <span class="text-sm">Explore this collection of fully designed components</span>
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest">
+                    <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - ReadTheDocs</h6>
+                    <span class="text-sm">Technical documentation on deploying this application</span>
                   </a>
                 </div>
               </div>
