--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -314,28 +314,28 @@
                     <div class="d-none d-lg-block">
                       <ul class="list-group">
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://appseed.us/support">
+                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
                             <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
-                            <span class="text-sm">Get support from experts (email and Discord)</span>
+                            <span class="text-sm">Get support from experts</span>
                           </a>
                         </li>
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit?AFFILIATE=128200">
-                            <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - UI Docs</h6>
-                            <span class="text-sm">Explore this collection of fully designed components</span>
+                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest">
+                            <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - ReadTheDocs</h6>
+                            <span class="text-sm">Technical documentation on deploying this application</span>
                           </a>
                         </li>
                       </ul>
                     </div>
                     <div class="row d-lg-none">
                       <div class="col-md-12 g-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://appseed.us/support">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
-                          <span class="text-sm">Get support from experts (email and Discord)</span>
+                          <span class="text-sm">Get support from experts</span>
                         </a>
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit?AFFILIATE=128200">
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - UI Docs</h6>
-                          <span class="text-sm">Explore this collection of fully designed components</span>
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest">
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - ReadTheDocs</h6>
+                          <span class="text-sm">Technical documentation on deploying this application</span>
                         </a>
                       </div>
                     </div>
