--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1187,7 +1187,7 @@
             <h6 class="text-sm">Company</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/presentation" target="_blank">
+                <a class="nav-link" href="/main/about-us.html" target="_blank">
                   About Us
                 </a>
               </li>
@@ -1236,7 +1236,7 @@
             <h6 class="text-sm">Help & Support</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/contact-us" target="_blank">
+                <a class="nav-link" href="/main/contact-us.html" target="_blank">
                   Contact Us
                 </a>
               </li>
