added missing load brackets  %} in templates

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -111,7 +111,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/team-5.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/team-5.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/bruce-mars.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/bruce-mars.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
