updated footer urls

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1187,22 +1187,17 @@
             <h6 class="text-sm">Company</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="/main/about-us.html" target="_blank">
+                <a class="nav-link" href="https://umaine.edu/edna/about-us" target="_blank">
                   About Us
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/templates/free" target="_blank">
-                  Freebies
+                <a class="nav-link" href="https://umaine.edu/edna/thematic-goal-3-macrosystem-edna-integration" target="_blank">
+                  Thematic Goal 3
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/templates/premium" target="_blank">
-                  Premium Tools
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/blog" target="_blank">
+                <a class="nav-link" href="https://umaine.edu/news/blog" target="_blank">
                   Blog
                 </a>
               </li>
@@ -1214,18 +1209,18 @@
             <h6 class="text-sm">Resources</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://iradesign.io/" target="_blank">
-                  Illustrations
+                <a class="nav-link" href="https://umaine.edu/edna/media-kit" target="_blank">
+                  Media Kit & Resources
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/bits" target="_blank">
-                  Bits & Snippets
+                <a class="nav-link" href="https://umaine.edu/edna/graduate-program" target="_blank">
+                  Graduate Program
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/affiliates/new" target="_blank">
-                  Affiliate Program
+                <a class="nav-link" href="https://umaine.edu/edna/people/department/researcher" target="_blank">
+                  Researcher Directory
                 </a>
               </li>
             </ul>
@@ -1241,18 +1236,18 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center" target="_blank">
-                  Knowledge Center
+                <a class="nav-link" href="https://docs.djangoproject.com/en/4.0/" target="_blank">
+                  Django Documentation
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://services.creative-tim.com/?ref=ct-mk2-footer" target="_blank">
-                  Custom Development
+                <a class="nav-link" href="https://www.django-rest-framework.org/" target="_blank">
+                  Django REST Framework
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/sponsorships" target="_blank">
-                  Sponsorships
+                <a class="nav-link" href="https://www.creative-tim.com/templates/free" target="_blank">
+                  Creative Tim
                 </a>
               </li>
             </ul>
@@ -1265,11 +1260,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="https://github.com/Maine-eDNA/medna-metadata/blob/main/TOS.rst" target="_blank">
                   Terms & Conditions
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.creative-tim.com/knowledge-center/privacy-policy" target="_blank">
-                  Privacy Policy
                 </a>
               </li>
               <li class="nav-item">
