updated footer urls in templates

--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-2 col-sm-6 col-6 mb-4">
           <div>
-            <h6 class="text-sm">Company</h6>
+            <h6 class="text-sm">Maine EPSCoR</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
                 <a class="nav-link" href="https://umaine.edu/edna/about-us" target="_blank">
